--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     color: white;
     text-shadow: 1px 1px 1px black;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url(121421.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)), url(/images/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
